asg/tests/pass/integers/u64/max.leo
function main() {
    let a: u64 = 18446744073709551615;
}