asg/tests/fail/integers/i32/min_fail.leo
function main() {
    let a: i32 = -2147483649;
}